--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col-md-6">
                 <nav>
                     <ul class="menu">
-                        <li><a href="">Home</a></li>
+                        <li><a href="">Home 1</a></li>
                         <li class="products-m"><a href="">Products</a>
                             <ul class="menu-products">
                                 <li><a>Lorem ipsum dolor</a></li>
