--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col-md-6">
                 <nav>
                     <ul class="menu">
-                        <li><a href="">Home 1</a></li>
+                        <li><a href="">Home</a></li>
                         <li class="products-m"><a href="">Products</a>
                             <ul class="menu-products">
                                 <li><a>Lorem ipsum dolor</a></li>
@@ -51,7 +51,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="c-filter"></div>
+                    <div class="c-filter">
+                        <div class="device-type"><div class="text">Device type</div>
+                            <div class="check-type"><input type="checkbox" id="filter">
+                            <label for="filter">Laptop</label></div>
+                            <div class="check-type"><input type="checkbox" id="tablet">
+                            <label for="tablet">Tablet</label></div>
+                        </div>
+                        <div class="color"><div class="text">Color</div>
+                            <div class="check-color"><input type="checkbox" id="red">
+                            <label for="red">Red</label></div>
+                            <div class="check-color"><input type="checkbox" id="black">
+                            <label for="black">Black</label></div>
+                            <div class="check-color"><input type="checkbox" id="green">
+                            <label for="green">Green</label></div>
+                            <div class="check-color"><input type="checkbox" id="blue">
+                            <label for="blue">Blue</label></div>
+                            <div class="check-color"><input type="checkbox" id="orange">
+                            <label for="orange">Orange</label></div>
+                        </div>
+                        <div class="ram"><div class="text">RAM</div>
+                            <div class="check-ram"><input type="checkbox" id="1gb">
+                            <label for="1gb">1GB</label></div>
+                            <div class="check-ram"><input type="checkbox" id="2gb">
+                            <label for="2gb">2GB</label></div>
+                            <div class="check-ram"><input type="checkbox" id="4gb">
+                            <label for="4gb">4GB</label></div>
+                            <div class="check-ram"><input type="checkbox" id="6gb">
+                            <label for="6gb">6GB</label></div>
+                            <div class="check-ram"><input type="checkbox" id="8gb">
+                            <label for="8gb">8GB</label></div>
+                        </div>
+                        <span class="show">Show more options ...</span>
+                        <button class="submint">Submint</button>
+                    </div>
                 </div>
                 <div class="col-md-9">
                     <div class="row">
@@ -232,6 +265,8 @@
         </div>
     </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer">© Copyright 2017</div>
+    </footer>
 </body>
 </html>
