add script by show on scroll modal

--- a/index.html
+++ b/index.html
@@ -274,6 +274,21 @@
     <footer>
         <div class="footer">© Copyright 2017</div>
     </footer>
+    <div class="modal">
+        <div class="modal-block">
+            <form action="">
+                <div class="btn-close">X</div>
+                <h3>Please call of more details</h3>
+                <div class="form-field">
+                    <input type="text" placeholder="your name">
+                </div>
+                <div class="form-field">
+                    <input type="text" placeholder="your phone">
+                </div>
+                <button>please call</button>
+            </form>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
